// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatMessage /> (native) should render error state correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    display="flex"
    flexDirection="column"
    gap="spacing.3"
    style={
      [
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": 8,
        },
      ]
    }
  >
    <View
      data-blade-component="chat-message"
      style={
        [
          {},
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="column"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "column",
            },
          ]
        }
      >
        <View
          alignSelf="flex-end"
          backgroundColor="surface.background.gray.intense"
          borderColor="surface.border.gray.muted"
          borderRadius="large"
          borderWidth="thin"
          data-blade-component="base-box"
          style={
            [
              {
                "alignSelf": "flex-end",
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(206, 10%, 29%, 0.12)",
                "borderRadius": 16,
                "borderStyle": "solid",
                "borderWidth": 1,
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              {
                "elevation": 1,
                "shadowColor": "hsla(206, 10%, 29%, 1)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.06,
                "shadowRadius": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            letterSpacing={50}
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": -0.18200000000000002,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Can you help me with the docs?
          </Text>
        </View>
        <View
          alignSelf="flex-end"
          data-blade-component="base-box"
          style={
            [
              {
                "alignSelf": "flex-end",
              },
            ]
          }
        >
          <View
            data-blade-component="base-box"
            style={
              [
                {
                  "marginTop": 4,
                },
              ]
            }
          >
            <View
              alignItems="center"
              data-blade-component="base-box"
              display="flex"
              flexDirection="row"
              gap="spacing.2"
              style={
                [
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "gap": 4,
                  },
                ]
              }
            >
              <View
                data-blade-component="box"
                flexShrink={0}
                style={
                  [
                    {
                      "flexShrink": 0,
                      "marginTop": 0,
                    },
                  ]
                }
              >
                <RNSVGSvgView
                  accessibilityElementsHidden={true}
                  align="xMidYMid"
                  bbHeight="12px"
                  bbWidth="12px"
                  data-blade-component="icon"
                  display="block"
                  fill="none"
                  focusable={false}
                  height="12px"
                  importantForAccessibility="no-hide-descendants"
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      [
                        {
                          "display": "block",
                        },
                      ],
                      {
                        "flex": 0,
                        "height": 12,
                        "width": 12,
                      },
                    ]
                  }
                  vbHeight={24}
                  vbWidth={24}
                  width="12px"
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                      fill={
                        {
                          "payload": 4291829265,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                      fill={
                        {
                          "payload": 4291829265,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                    <RNSVGPath
                      clipRule={0}
                      d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                      fill={
                        {
                          "payload": 4291829265,
                          "type": 0,
                        }
                      }
                      fillRule={0}
                      propList={
                        [
                          "fill",
                          "fillRule",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
              <Text
                accessible={true}
                color="feedback.text.negative.intense"
                data-blade-component="text"
                fontFamily="text"
                fontSize={50}
                fontStyle="normal"
                fontWeight="regular"
                letterSpacing={50}
                lineHeight={50}
                marginTop="spacing.0"
                style={
                  [
                    {
                      "color": "hsla(4, 85%, 44%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 11,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": -0.14300000000000002,
                      "lineHeight": 16,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              >
                Message not sent. Tap to retry.
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ChatMessage /> (native) should render other message with leading icon correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    display="flex"
    flexDirection="column"
    gap="spacing.3"
    style={
      [
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": 8,
        },
      ]
    }
  >
    <View
      data-blade-component="chat-message"
      style={
        [
          {},
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          alignItems="flex-start"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          gap="spacing.4"
          style={
            [
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
                "gap": 12,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            height="spacing.6"
            justifyContent="center"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 20,
                  "justifyContent": "center",
                  "paddingBottom": 4,
                  "paddingLeft": 2,
                  "paddingRight": 2,
                  "paddingTop": 8,
                },
              ]
            }
          >
            <RNSVGSvgView
              accessibilityElementsHidden={true}
              align="xMidYMid"
              bbHeight="24px"
              bbWidth="24px"
              data-blade-component="icon"
              fill="none"
              focusable={false}
              height="24px"
              importantForAccessibility="no-hide-descendants"
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  [
                    {},
                  ],
                  {
                    "flex": 0,
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width="24px"
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M3 3H7.5H9.74999L12 12L14.25 3H16.5H21V7.5V9.75L12 12L21 14.25V16.5V21H16.5H14.25L12 12L9.74999 21H7.5H3V16.5V14.25L12 12L3 9.75V7.5V3Z"
                  fill={
                    {
                      "payload": 4278230620,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            data-blade-component="base-box"
            display="flex"
            flexDirection="column"
            style={
              [
                {
                  "display": "flex",
                  "flexBasis": 0,
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ]
            }
          >
            <View
              data-blade-component="base-box"
              style={
                [
                  {
                    "paddingBottom": 4,
                    "paddingTop": 4,
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                letterSpacing={50}
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(0, 0%, 2%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": -0.18200000000000002,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              >
                This is another demo message
              </Text>
            </View>
          </View>
        </View>
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginLeft": 56,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`<ChatMessage /> (native) should render self message (default type) correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    display="flex"
    flexDirection="column"
    gap="spacing.3"
    style={
      [
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": 8,
        },
      ]
    }
  >
    <View
      data-blade-component="chat-message"
      style={
        [
          {},
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="column"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "column",
            },
          ]
        }
      >
        <View
          alignSelf="flex-end"
          backgroundColor="surface.background.gray.intense"
          borderColor="surface.border.gray.muted"
          borderRadius="large"
          borderWidth="thin"
          data-blade-component="base-box"
          style={
            [
              {
                "alignSelf": "flex-end",
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(206, 10%, 29%, 0.12)",
                "borderRadius": 16,
                "borderStyle": "solid",
                "borderWidth": 1,
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              {
                "elevation": 1,
                "shadowColor": "hsla(206, 10%, 29%, 1)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.06,
                "shadowRadius": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            letterSpacing={50}
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": -0.18200000000000002,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            This is another demo message
          </Text>
        </View>
        <View
          alignSelf="flex-end"
          data-blade-component="base-box"
          style={
            [
              {
                "alignSelf": "flex-end",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`<ChatMessage /> (native) should render self message (last type) correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    display="flex"
    flexDirection="column"
    gap="spacing.3"
    style={
      [
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": 8,
        },
      ]
    }
  >
    <View
      data-blade-component="chat-message"
      style={
        [
          {},
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="column"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "column",
            },
          ]
        }
      >
        <View
          alignSelf="flex-end"
          backgroundColor="surface.background.gray.intense"
          borderColor="surface.border.gray.muted"
          borderRadius="large"
          borderWidth="thin"
          data-blade-component="base-box"
          style={
            [
              {
                "alignSelf": "flex-end",
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(206, 10%, 29%, 0.12)",
                "borderRadius": 16,
                "borderStyle": "solid",
                "borderWidth": 1,
                "paddingBottom": 12,
                "paddingLeft": 12,
                "paddingRight": 12,
                "paddingTop": 12,
              },
              {
                "elevation": 1,
                "shadowColor": "hsla(206, 10%, 29%, 1)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.06,
                "shadowRadius": 4,
              },
            ]
          }
        >
          <Text
            accessible={true}
            color="surface.text.gray.normal"
            data-blade-component="text"
            fontFamily="text"
            fontSize={100}
            fontStyle="normal"
            fontWeight="regular"
            letterSpacing={50}
            lineHeight={100}
            style={
              [
                {
                  "color": "hsla(0, 0%, 2%, 1)",
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "letterSpacing": -0.18200000000000002,
                  "lineHeight": 20,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 0,
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            This is a demo message
          </Text>
        </View>
        <View
          alignSelf="flex-end"
          data-blade-component="base-box"
          style={
            [
              {
                "alignSelf": "flex-end",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`<ChatMessage /> (native) should render with Card child correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    display="flex"
    flexDirection="column"
    gap="spacing.3"
    style={
      [
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": 8,
        },
      ]
    }
  >
    <View
      data-blade-component="chat-message"
      style={
        [
          {},
        ]
      }
    >
      <View
        data-blade-component="base-box"
        style={
          [
            {},
          ]
        }
      >
        <View
          alignItems="flex-start"
          data-blade-component="base-box"
          display="flex"
          flexDirection="row"
          gap="spacing.4"
          style={
            [
              {
                "alignItems": "flex-start",
                "display": "flex",
                "flexDirection": "row",
                "gap": 12,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            height="spacing.6"
            justifyContent="center"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 20,
                  "justifyContent": "center",
                  "paddingBottom": 4,
                  "paddingLeft": 2,
                  "paddingRight": 2,
                  "paddingTop": 8,
                },
              ]
            }
          >
            <RNSVGSvgView
              accessibilityElementsHidden={true}
              align="xMidYMid"
              bbHeight="24px"
              bbWidth="24px"
              data-blade-component="icon"
              fill="none"
              focusable={false}
              height="24px"
              importantForAccessibility="no-hide-descendants"
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  [
                    {},
                  ],
                  {
                    "flex": 0,
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width="24px"
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M3 3H7.5H9.74999L12 12L14.25 3H16.5H21V7.5V9.75L12 12L21 14.25V16.5V21H16.5H14.25L12 12L9.74999 21H7.5H3V16.5V14.25L12 12L3 9.75V7.5V3Z"
                  fill={
                    {
                      "payload": 4278230620,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <View
            data-blade-component="base-box"
            display="flex"
            flexDirection="column"
            style={
              [
                {
                  "display": "flex",
                  "flexBasis": 0,
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
              ]
            }
          >
            <View
              data-blade-component="base-box"
              style={
                [
                  {
                    "paddingBottom": 0,
                    "paddingTop": 0,
                  },
                ]
              }
            >
              <View
                accessibilityState={
                  {
                    "disabled": undefined,
                  }
                }
                accessible={true}
                borderRadius="medium"
                data-blade-component="card"
                display="block"
                isFocused={false}
                isSelected={false}
                style={
                  [
                    {
                      "borderRadius": 12,
                      "display": "block",
                    },
                    {
                      "borderColor": "transparent",
                      "borderStyle": "solid",
                      "borderWidth": 2,
                    },
                  ]
                }
              >
                <View
                  backgroundColor="surface.background.gray.intense"
                  borderRadius="medium"
                  data-blade-component="base-box"
                  elevation="lowRaised"
                  style={
                    [
                      {
                        "backgroundColor": "hsla(0, 0%, 100%, 1)",
                        "borderRadius": 12,
                        "paddingBottom": 24,
                        "paddingLeft": 24,
                        "paddingRight": 24,
                        "paddingTop": 24,
                        "textAlign": "left",
                      },
                      {
                        "elevation": 8,
                        "shadowColor": "hsla(200, 10%, 18%, 1)",
                        "shadowOffset": {
                          "height": 2,
                          "width": 0,
                        },
                        "shadowOpacity": 0.06,
                        "shadowRadius": 2,
                      },
                      [
                        {
                          "borderColor": "hsla(206, 10%, 29%, 0.12)",
                          "borderStyle": "solid",
                          "borderWidth": 1,
                          "display": "flex",
                          "flexDirection": "column",
                          "width": "100%",
                        },
                      ],
                    ]
                  }
                  textAlign="left"
                  variant="primary"
                >
                  <View
                    data-blade-component="card-body"
                    style={
                      [
                        {},
                      ]
                    }
                  >
                    <View
                      data-blade-component="box"
                      display="flex"
                      flexDirection="column"
                      gap="8px"
                      style={
                        [
                          {
                            "display": "flex",
                            "flexDirection": "column",
                            "gap": 8,
                          },
                        ]
                      }
                    >
                      <Text
                        accessible={true}
                        color="surface.text.gray.normal"
                        data-blade-component="text"
                        fontFamily="text"
                        fontSize={100}
                        fontStyle="normal"
                        fontWeight="regular"
                        letterSpacing={50}
                        lineHeight={100}
                        style={
                          [
                            {
                              "color": "hsla(0, 0%, 2%, 1)",
                              "fontFamily": "Inter",
                              "fontSize": 14,
                              "fontStyle": "normal",
                              "fontWeight": "400",
                              "letterSpacing": -0.18200000000000002,
                              "lineHeight": 20,
                              "marginBottom": 0,
                              "marginLeft": 0,
                              "marginRight": 0,
                              "marginTop": 0,
                              "paddingBottom": 0,
                              "paddingLeft": 0,
                              "paddingRight": 0,
                              "paddingTop": 0,
                              "textDecorationLine": "none",
                            },
                          ]
                        }
                      >
                        Where do you want to collect payments?
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginLeft": 56,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;
